# claude-optimize

./: .claudeignore  .env.example  .gitignore  README.md  migratingi_into_SQLite.md  start-dev.sh
.claude/: settings.json
.claude/skills/: themed-commits.md
.claude/skills/pre-commit-review/: SKILL.md
.cursor/rules/: no-em-dashes.mdc
backend/: apply_runner.py  chat_history_extractor.py  claude_runner.py  db.py  demo_findings.py  detect_claude_usage.py  git_pr.py  main.py  model_registry.md  model_registry.py  models.py  orchestrator.py  project_summary.py  pyproject.toml  recent_projects.py  report_builder.py  settings.py  store.py
backend/analyzers/: __init__.py  base.py  batching.py  claude_md_bloat.py  claudeignore_quality.py  commands_quality.py  context_budget.py  mcp_tool_bloat.py  model_upgrade.py  prompt_caching.py  prompt_engineering.py  settings_permissions.py  skills_from_history.py  skills_quality.py  structured_outputs.py  tool_use.py
backend/migrations/: 001_initial.sql
commands/: optimize.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnalyzerSection.tsx  ApplyConfirmModal.tsx  ApplyProgress.tsx  CleanAnalyzersSummary.tsx  CodeBlock.tsx  FindingCard.tsx  MarkdownContent.tsx  NextSteps.tsx  PromptModal.tsx  Scorecard.tsx  SelectionBar.tsx  ShareModal.tsx
frontend/src/pages/: History.tsx  Report.tsx  ScanInput.tsx  (+1 more)
sample_project/: CLAUDE.md  classifier.py  sample_tickets.json
sample_project/.claude/: settings.json
(+14 files in other folders)
