[project]
name = "claude-optimize-backend"
version = "0.1.0"
description = "Backend for Claude Optimize - scans Claude-powered codebases for optimization opportunities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
